--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "type": "commonjs",
   "devDependencies": {
+    "@types/better-sqlite3": "^7.6.13",
     "@types/node": "^24.0.12",
     "@types/pg": "^8.15.4",
     "ts-node-dev": "^2.0.0",
@@ -21,7 +22,10 @@
     "vitest": "^3.2.4"
   },
   "dependencies": {
-    "pg": "^8.16.3",
-    "chalk": "^5.4.1"
+    "better-sqlite3": "^12.2.0",
+    "chalk": "^5.4.1",
+    "mongodb": "^6.17.0",
+    "mysql2": "^3.14.1",
+    "pg": "^8.16.3"
   }
 }
