--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "open-audit",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "module": "dist/index.mjs",
+  "types": "dist/index.d.ts",
   "scripts": {
-    "build": "tsc",
+    "build": "tsup",
     "start": "node dist/index.js",
     "dev": "ts-node-dev --respawn src/index.ts",
     "test": "vitest --disable-console-intercept"
@@ -18,6 +20,7 @@
     "@types/node": "^24.0.12",
     "@types/pg": "^8.15.4",
     "ts-node-dev": "^2.0.0",
+    "tsup": "^8.5.0",
     "typescript": "^5.8.3",
     "vitest": "^3.2.4"
   },
