--- a/package.json
+++ b/package.json
@@ -1,20 +1,38 @@
 {
-  "name": "open-audit",
+  "name": "@arcari/open-audit",
   "version": "1.0.0",
-  "description": "",
+  "description": "> A lightweight, pluggable audit log library for Node.js — log user actions to Postgres, MySQL, MongoDB, SQLite, or files.",
+  "keywords": [],
+  "homepage": "https://github.com/tomaslachmann/open-audit#readme",
+  "bugs": {
+    "url": "https://github.com/tomaslachmann/open-audit/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/tomaslachmann/open-audit.git"
+  },
+  "license": "MIT",
+  "author": "Tomas Lachmann",
+  "type": "commonjs",
   "main": "dist/index.js",
-  "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
+  "directories": {
+    "example": "examples",
+    "test": "test"
+  },
   "scripts": {
     "build": "tsup",
     "start": "node dist/index.js",
     "dev": "ts-node-dev --respawn src/index.ts",
     "test": "vitest --disable-console-intercept"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "type": "commonjs",
+  "dependencies": {
+    "better-sqlite3": "^12.2.0",
+    "chalk": "^5.4.1",
+    "mongodb": "^6.17.0",
+    "mysql2": "^3.14.1",
+    "pg": "^8.16.3"
+  },
   "devDependencies": {
     "@types/better-sqlite3": "^7.6.13",
     "@types/node": "^24.0.12",
@@ -24,11 +42,5 @@
     "typescript": "^5.8.3",
     "vitest": "^3.2.4"
   },
-  "dependencies": {
-    "better-sqlite3": "^12.2.0",
-    "chalk": "^5.4.1",
-    "mongodb": "^6.17.0",
-    "mysql2": "^3.14.1",
-    "pg": "^8.16.3"
-  }
+  "module": "dist/index.mjs"
 }
