[#master] added tests

--- a/package.json
+++ b/package.json
@@ -35,6 +35,10 @@
     "@types/mysql2": "github:types/mysql2",
     "@types/node": "^24.0.12",
     "@types/pg": "^8.15.4",
+    "better-sqlite3": "^12.2.0",
+    "dotenv": "^17.2.0",
+    "mysql2": "^3.14.1",
+    "pg": "^8.16.3",
     "ts-node-dev": "^2.0.0",
     "tsup": "^8.5.0",
     "typescript": "^5.8.3",
