changed branch in workflow

--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "build": "tsup",
     "start": "node dist/index.js",
     "dev": "ts-node-dev --respawn src/index.ts",
-    "test": "vitest --disable-console-intercept"
+    "test": "vitest --disable-console-intercept",
+    "test:unit": "vitest run --include test/**/*.test.ts --exclude test/**/*.integration.test.ts",
+    "test:integration": "vitest run --include test/**/*.integration.test.ts"
   },
   "dependencies": {
     "chalk": "^5.4.1"
