--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,6 +8,7 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
+
     services:
       postgres:
         image: postgres:15
@@ -15,8 +16,7 @@ jobs:
           POSTGRES_USER: postgres
           POSTGRES_PASSWORD: postgres
           POSTGRES_DB: audit_test
-        ports:
-          - 5432:5432
+        ports: [5432:5432]
         options: >-
           --health-cmd="pg_isready -U postgres"
           --health-interval=10s
@@ -28,8 +28,7 @@ jobs:
         env:
           MYSQL_ROOT_PASSWORD: password
           MYSQL_DATABASE: audit_test
-        ports:
-          - 3306:3306
+        ports: [3306:3306]
         options: >-
           --health-cmd="mysqladmin ping -ppassword"
           --health-interval=10s
@@ -38,8 +37,7 @@ jobs:
 
       mongo:
         image: mongo:6
-        ports:
-          - 27017:27017
+        ports: [27017:27017]
         options: >-
           --health-cmd="mongosh --eval 'db.runCommand({ ping: 1 })'"
           --health-interval=10s
@@ -52,19 +50,26 @@ jobs:
       TEST_MONGO_URI: mongodb://localhost:27017/audit_test
 
     steps:
-      - uses: actions/checkout@v3
+      - name: 📥 Checkout
+        uses: actions/checkout@v3
 
-      - name: Set up Node.js
+      - name: 🧰 Setup Node.js
         uses: actions/setup-node@v3
         with:
           node-version: 20
 
-      - name: Install dependencies
-        run: npm install
+      - name: 📦 Install dependencies
+        run: npm ci
 
-      - name: Build
-        run: npm run build || true
-
-      - name: Run Tests
+      - name: 🧪 Run tests
         run: npm run test
-      
+
+      - name: 🏗️ Build package
+        run: npm run build
+
+      - name: 🪄 Upload build artifact (optional)
+        uses: actions/upload-artifact@v3
+        with:
+          name: open-audit-dist
+          path: dist/
+     
